--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- SEO Meta Tags -->
-    <title>Emoji Spy</title>
+    <title>Emoji Spy | Secure Emoji Encryption Tool (AES-256)</title>
     <meta
       name="description"
       content="Securely encrypt your messages into emojis using AES-256. Private, free, and works on any device."
     />
     <meta
       name="keywords"
-      content="emoji encryption,emoji encryption made by muhammad abdullah,emoji spy made by muhammad abdullah, encryption, message encryption, encrypt message, encrypt emoji, message encrypt, text to emoji,text to emoji converter, converter, convert text to emoji, AES-256, private messaging,emoji spy,"
+      content="emoji encryption,Encrypt WhatsApp messages with emojis,Secret emoji code generator,emoji encryption made by muhammad abdullah,emoji spy made by muhammad abdullah, encryption, message encryption, encrypt message, encrypt emoji, message encrypt, text to emoji,text to emoji converter, converter, convert text to emoji, AES-256, private messaging,emoji spy,"
     />
 
     <!-- Open Graph Tags for Social Sharing -->
