Add favicon and apple-touch-icon links

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link rel="icon" type="image/png" sizes="48x48" href="favicon.png">
+
+<link rel="apple-touch-icon" href="favicon.png">
+    
     <!-- SEO Meta Tags -->
     <title>Emoji Spy | Secure Emoji Encryption Tool (AES-256)</title>
     <meta
@@ -41,13 +45,8 @@
     <!-- Twitter Card Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Emoji Spy - Send Hidden Messages on WhatsApp" />
-    <meta name="twitter:description" content="Encrypt your secret messages into emojis. Free, private, and secure." />
-
-    <!-- Emoji Favicon (Inline SVG) -->
-    <link
-      rel="icon"
-      href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>🕵️</text></svg>"
-    />
+    <meta name="twitter:description" content="Encrypt your secret messages into emojis. Free, private, and secure." 
+      
 
     <!-- Google Fonts: Inter (body) + JetBrains Mono (code/hacker aesthetic) -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
